--- a/frontend/app/styles/app.css
+++ b/frontend/app/styles/app.css
@@ -14,6 +14,7 @@ section.index {
   min-height: 1000px;
   background: #eceef1;
   padding-top: 100px;
+  padding-bottom: 35px;
 }
 
 footer.index {
@@ -101,6 +102,68 @@ div.all-contents div.info a {
   font-weight: 600;
 }
 
+/* post page style*/
 
+div.post-title {
+  border-left: 5px solid rgb(0, 218, 67);
+}
 
+div.post-title h1 {
+  margin: 0;
+  font-size: 1.5em;
+  color: #066;
+  word-wrap: break-word;
+  padding-top: 3px;
+  margin-left: 10px;
+  margin-right: 90px;
+}
+
+div.post-title hr {
+  margin-top: 5px;
+  margin-bottom: 5px;
+  margin-left: 10px;
+}
+
+div.post-title div.post-info {
+  margin-right: 90px;
+  margin-left: 15px;
+  color: #aaa;
+  font-size: 0.9em;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
+div.post-title div.post-info a {
+  color: #555;
+  letter-spacing: 1.5px;
+  font-weight: 600;
+}
+
+div.post-body {
+  margin-bottom: 30px;
+  margin-top: 30px;
+}
+
+div.comments-number {
+  color: #444;
+  font-size: 1.1em;
+  margin-bottom: 30px;
+}
+
+ul.comments li.comment {
+  border: none;
+  margin-bottom: 30px;
+}
+
+li.comment div.comment-info {
+  color: #aaa;
+  font-size: 0.9em;
+  padding-top: 5px;
+}
+
+li.comment div.comment-info a {
+  color: #555;
+  font-weight: 600;
+}
 
