--- a/frontend/app/templates/application.hbs
+++ b/frontend/app/templates/application.hbs
@@ -4,7 +4,7 @@
       SimpleForum
     </div>
     <ul class="nav navbar-nav">
-      <li><a href="/" id="home" >Home</a></li>
+      <li>{{#link-to "index"}}Home{{/link-to}}</li>
       <li><a href="/about" id="about" >About</a></li>
     </ul>
   </div>
