--- a/frontend/app/templates/posts.hbs
+++ b/frontend/app/templates/posts.hbs
@@ -11,35 +11,12 @@
     {{#link-to index}}{{model.postUserName}}{{/link-to}}
     <span>发表.</span>
     {{date-format model.created_at}}
-    
+
   </div>
   <div class="clearfix"></div>
 </div>
 <div class="entry post-body">
   {{model.body}}
 </div>
-<div class="comments-number">
-  共{{model.comments.length}}条回复:
-</div>
-<ul class="list-group comments">
-  {{#each comment in model.comments}}
-  <li class="comment list-group-item">
-    <div class="pull-left avatar">
-       <img class="img-responsive img-circle" src={{comment.userAvatar}} alt="avatar" />
-    </div>
-    <div class="comment-info">
-      {{#link-to index}}{{comment.commentUserName}}{{/link-to}}
-      <span>.</span>
-      <span>{{date-format comment.created_at}}</span>
-    </div>
-    <div class="entry comment-contentr">
-      {{comment.body}}
-    </div>
-    <div class="clearfix"></div>
-  
-  </li>
-
-  {{/each}}
-</ul>
-  
+{{outlet}}
 </div>
