--- a/frontend/app/templates/posts.hbs
+++ b/frontend/app/templates/posts.hbs
@@ -8,7 +8,7 @@
   <div class="post-info">
     {{#link-to index}}{{model.tag}}{{/link-to}}
     <span>由</span>
-    {{#link-to index}}{{model.postUserName}}{{/link-to}}
+    {{#link-to "users.posts" model.postUserName}}{{model.postUserName}}{{/link-to}}
     <span>发表.</span>
     {{date-format model.created_at}}
 
@@ -18,5 +18,5 @@
 <div class="entry post-body">
   {{model.body}}
 </div>
-{{outlet}}
+  {{outlet}}
 </div>
