--- a/frontend/app/templates/posts/comments.hbs
+++ b/frontend/app/templates/posts/comments.hbs
@@ -2,14 +2,14 @@
   共{{model.length}}条回复:
 </div>
 <ul class="list-group comments">
-  {{#each comment in pagedContent}}
+  {{#each comment in model}}
     <li class="comment list-group-item">
     
       <div class="pull-left avatar">
         <img class="img-responsive img-circle" src="{{comment.userAvatar}}" alt="avatar" />
       </div>
       <div class="comment-info">
-        {{#link-to index}}{{comment.commentUserName}}{{/link-to}}
+        {{#link-to "users.posts" comment.commentUserName}}{{comment.commentUserName}}{{/link-to}}
         <span>.{{date-format comment.created_at}}</span>
       </div>
       <div class="entry comment-content">
@@ -19,5 +19,5 @@
     </li>
   {{/each}}
   
-  {{page-numbers content=pagedContent}}
+  {{page-numbers content=content}}
 </ul>
