--- a/frontend/app/templates/application.hbs
+++ b/frontend/app/templates/application.hbs
@@ -5,11 +5,17 @@
     </div>
     <ul class="nav navbar-nav">
       <li>{{#link-to "index"}}Home{{/link-to}}</li>
-      <li><a href="/about" id="about" >About</a></li>
+      <li><a href="#">About</a></li>
+    </ul>
+    <ul class="nav navbar-nav navbar-right">
+      <li><a href="#" data-toggle="modal" data-target="#signupForm">Signup</a></li>
+      <li><a href="#" data-toggle="modal" data-target="#loginForm">Login</a></li>
     </ul>
   </div>
 </nav>
 <section class="index">
+  {{render "signup"}}
+  {{render "login" }}
   {{outlet}}
 </section>
 <footer class="container-fluid index">
