--- a/frontend/app/styles/app.css
+++ b/frontend/app/styles/app.css
@@ -165,6 +165,7 @@ div.post-title h1 {
   padding-top: 3px;
   margin-left: 10px;
   margin-right: 90px;
+  font-weight: 300;
 }
 
 div.post-title hr {
@@ -362,4 +363,56 @@ div.user-tab > ul li a.active {
 
 .modal-footer {
   border-top-style: dashed;
+}
+
+/* post new page style*/
+
+div.post-new-page {
+  border: none;
+}
+
+div.post-new-page div.panel-heading {
+  background-color: rgb(66, 156, 214);
+  color: #fff;
+  margin-bottom: 20px;
+  border-radius: 6px;
+}
+
+div.post-new-page input.post-title {
+  border: none;
+  box-shadow: none;
+  border-radius: 0;
+}
+
+div.post-new-page input.post-title:focus {
+  background-color: #eee;
+}
+
+div.post-new-page select {
+  border: none;
+  box-shadow: none;
+}
+
+div.post-new-page select:focus{
+  outline: none;
+  box-shadow: none;
+  background-color: #eee;
+}
+
+div.post-new-page button[type="submit"] {
+  margin-top: 35px;
+  background-color: rgb(66, 156, 214);
+  border-radius: 6px;
+  color: #fff;
+  border: none;
+  padding: 8px 40px;
+}
+
+div.post-new-page button[type="submit"]:focus {
+  outline: none;
+}
+
+div.post-new-page button[type="submit"]:hover {
+  color: #fff;
+  opacity: 0.85;
 }
