--- a/frontend/app/templates/signup.hbs
+++ b/frontend/app/templates/signup.hbs
@@ -11,6 +11,9 @@
       <div class="modal-body">
         <form {{action "signup" on="submit"}}>
           <div class="form-group">
+            {{input value=name class="form-control" placeholder="Name"}}
+          </div>
+          <div class="form-group">
             {{input value=email class="form-control" placeholder="Email Address" }}
           </div>
           <div class="form-group">
