--- a/frontend/app/templates/user.hbs
+++ b/frontend/app/templates/user.hbs
@@ -47,8 +47,8 @@
 </div>
   <div class="container-fluid user-tab">
     <ul class="nav nav-tabs" >
-      <li role="presentation">{{#link-to "users.posts"}}Post List {{/link-to}}</li>
-      <li role="presentation">{{#link-to "users.comments"}}Comments List{{/link-to}}</li>
+      <li role="presentation">{{#link-to "user.posts"}}Post List {{/link-to}}</li>
+      <li role="presentation">{{#link-to "user.comments"}}Comments List{{/link-to}}</li>
     </ul>
     {{outlet}}
   </div>
