--- a/frontend/app/templates/post.hbs
+++ b/frontend/app/templates/post.hbs
@@ -19,4 +19,6 @@
   {{model.body}}
 </div>
   {{outlet}}
+
+  <button class="center-block btn btn-default normal-button" {{action "transToCommentMode"}} data-toggle="modal" data-target="#newPostForm">Post a comment</button>
 </div>
