--- a/frontend/app/templates/application.hbs
+++ b/frontend/app/templates/application.hbs
@@ -10,7 +10,7 @@
     <ul class="nav navbar-nav navbar-right">
       <li><a href="#" data-toggle="modal" data-target="#signupForm">Signup</a></li>
       <li><a href="#" data-toggle="modal" data-target="#loginForm">Login</a></li>
-      <li><a href="#" data-toggle="modal" data-target="#newPostForm">Test</a></li>
+      <li><a href="#" {{action "transToPostMode"}} data-toggle="modal" data-target="#newPostForm">Test</a></li>
     </ul>
   </div>
 </nav>
