--- a/frontend/app/templates/posts/new.hbs
+++ b/frontend/app/templates/posts/new.hbs
@@ -3,28 +3,42 @@
   <div class="modal-content ">
     <div class="modal-header">
       <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-      <p class="modal-title" id='newPostFormLabel'>Create your new post</p>
-
+      {{#if isCreateComment}}
+        <p class="modal-title" id='newPostFormLabel'>Create your new Comment</p>
+      {{else}}
+        <p class="modal-title" id='newPostFormLabel'>Create your new post</p>
+      {{/if}}
     </div>
     <div class="modal-body">
       <div class="container-fluid post-new-page">
-      <form {{action "createPost" on="submit"}} class="form-horizontal">
-        <div class="form-group">
-          <div class="col-sm-4">
-            {{view "select" content=selectContent class="form-control" selection=tag}}
+        {{#if isCreateComment}}
+        <form {{action "createComment" on="submit"}} class="form-horizontal">
+          <div class="form-group">
+            <div class="col-sm-12">
+              {{view "custom-textarea" id="editor" class="form-control" value=contentBody}}
+            </div>
           </div>
-          <div class="col-sm-8">
-            {{input class="form-control post-title" value=title placeholder="Post title..."}}
+          <button type="submit" class="btn btn-default center-block">Create</button>
+        </form>
+        {{else}}
+        <form {{action "createPost" on="submit"}} class="form-horizontal">
+          <div class="form-group">
+            <div class="col-sm-4">
+              {{view "select" content=selectContent class="form-control" selection=tag}}
+            </div>
+            <div class="col-sm-8">
+              {{input class="form-control post-title" value=title placeholder="Post title..."}}
+            </div>
           </div>
-        </div>
 
-        <div class="form-group">
-          <div class="col-sm-12">
-            {{view "custom-textarea" id="editor" class="form-control" value=postBody}}
+          <div class="form-group">
+            <div class="col-sm-12">
+              {{view "custom-textarea" id="editor" class="form-control" value=contentBody}}
+            </div>
           </div>
-        </div>
-        <button type="submit" class="btn btn-default center-block">Create</button>
-      </form>
+          <button type="submit" class="btn btn-default center-block">Create</button>
+        </form>
+        {{/if}}
     </div>
   </div>
   </div>
