--- a/frontend/app/templates/post/comments.hbs
+++ b/frontend/app/templates/post/comments.hbs
@@ -4,9 +4,11 @@
 <ul class="list-group comments">
   {{#each comment in model}}
     <li class="comment list-group-item">
+      {{#if isAuthenticated}}
       <div class="pull-right reply">
         <a href="#" {{action "transToCommentMode"}} data-toggle="modal" data-target="#newPostForm"><span class="glyphicon glyphicon-menu-down" aria-label="reply" aria-hidden="true"></span></a> 
       </div>
+      {{/if}}
       <div class="pull-left avatar">
         <img class="img-responsive img-circle" src="{{comment.userAvatar}}" alt="avatar" />
       </div>
