--- a/frontend/app/templates/signup.hbs
+++ b/frontend/app/templates/signup.hbs
@@ -22,11 +22,10 @@
           <div class="form-group">
             {{input value=password_confirmation class="form-control" type="password" placeholder="Confirm Password"}}
           </div>
-          <button type="submit" class="btn btn-block">Signup</button>
+          <button id="signupButton" data-loading-text="Signup..." autocomplete="off" type="submit" class="btn btn-block">Signup</button>
         </form>
       </div>
       <div class="modal-footer">
-        
       </div>
 
     </div>
