--- a/frontend/app/templates/post.hbs
+++ b/frontend/app/templates/post.hbs
@@ -20,5 +20,11 @@
 </div>
   {{outlet}}
 
-  <button class="center-block btn btn-default normal-button" {{action "transToCommentMode"}} data-toggle="modal" data-target="#newPostForm">Post a comment</button>
+  {{#if isAuthenticated}}
+    <button class="center-block btn btn-default normal-button" {{action "transToCommentMode"}} data-toggle="modal" data-target="#newPostForm">Post a comment</button>
+  {{else}}
+    <div class="static-alert container-fluid">
+      You must <a href="#" data-toggle="modal" data-target="#loginForm">login</a> or  <a href="#" data-toggle="modal" data-target="#signupForm">signup</a> to post a comment
+    </div>
+  {{/if}}
 </div>
