--- a/frontend/app/templates/posts/new.hbs
+++ b/frontend/app/templates/posts/new.hbs
@@ -36,7 +36,7 @@
               {{view "custom-textarea" id="editor" class="form-control" value=contentBody}}
             </div>
           </div>
-          <button type="submit" class="btn btn-default center-block">Create</button>
+          <button type="submit" data-loading-text="Creating..." autocomplete="off" id="createButton" class="btn btn-default center-block">Create</button>
         </form>
         {{/if}}
     </div>
