--- a/frontend/app/templates/login.hbs
+++ b/frontend/app/templates/login.hbs
@@ -20,7 +20,7 @@
           
         </form>
       </div>
-      <div class="modal-footer">
+      <div class="error-message modal-footer">
         {{#if hasError}}
           {{errorMessage}}
         {{/if}}
