--- a/frontend/app/templates/application.hbs
+++ b/frontend/app/templates/application.hbs
@@ -14,15 +14,15 @@
         <a href="#" class="dropdown-toggle" data-toggle="dropdown" aria-expanded="true"><span class="caret"></span>{{currentUser.name}}</a>
         <ul class="dropdown-menu" role="menu">
           <li role="presentation">{{#link-to "user.posts" currentUser  role="menuitem"}}My own page{{/link-to}}</li>
-          <li role="presentation"><a role="menuitem" href="#" data-toggle="modal" data-target="#newPostForm" >New post</a></li>
+          <li role="presentation"><a {{action "transToPostMode"}} role="menuitem" href="#" data-toggle="modal" data-target="#newPostForm" >New post</a></li>
           <li role="presentation"><a {{action "logOut"}} role="menuitem" href="#">Logout</a></li>
         </ul>
       </li>
     </ul>
     {{else}}
     <ul class="nav navbar-nav navbar-right">
-      <li><a href="#" data-toggle="modal" data-target="#signupForm">Signup</a></li>
-      <li><a {{action "resetErrorMessage"}} href="#" data-toggle="modal" data-target="#loginForm">Login</a></li>
+      <li><a {{action "resetErrorMessage" "signup"}} href="#" data-toggle="modal" data-target="#signupForm">Signup</a></li>
+      <li><a {{action "resetErrorMessage" "login"}} href="#" data-toggle="modal" data-target="#loginForm">Login</a></li>
     </ul>
     {{/if}}
   </div>
