--- a/frontend/app/templates/login.hbs
+++ b/frontend/app/templates/login.hbs
@@ -1,4 +1,4 @@
-<div class="modal fade bs-example-modal-sm signup-login-form" id="loginForm" role="dialog" aria-labelledby="loginFormLabel" aria-hidden="true">
+<div class="modal fade  signup-login-form" id="loginForm" role="dialog" aria-labelledby="loginFormLabel" aria-hidden="true">
   <div class="modal-dialog modal-sm">
     <div class="modal-content">
       <div class="modal-header">
