--- a/frontend/app/templates/application.hbs
+++ b/frontend/app/templates/application.hbs
@@ -5,13 +5,15 @@
     </div>
     <ul class="nav navbar-nav">
       <li>{{#link-to "index"}}Home{{/link-to}}</li>
-      <li><a href="#">About</a></li>
+      <li>{{#link-to "about"}}About{{/link-to}}</li>
     </ul>
     {{#if isAuthenticated}}
     <ul class="nav navbar-nav navbar-right menu-nav">
-      <li class="notification"><a href="#"><span class="glyphicon glyphicon-bell" aria-hidden="true"></span> </a></li>
+      <li class="notification"><a  data-toggle="modal" data-target="#notificationCenter" href="#">
+          <span class="glyphicon glyphicon-bell {{has-notification currentUser.notifications}}" aria-hidden="true"></span> 
+        </a></li>
       <li class="dropdown">
-        <a href="#" class="dropdown-toggle" data-toggle="dropdown" aria-expanded="true"><span class="caret"></span>{{currentUser.name}}</a>
+        <a href="#" class="dropdown-toggle" data-toggle="dropdown" aria-expanded="true"><span class="caret"></span> {{currentUser.name}}</a>
         <ul class="dropdown-menu" role="menu">
           <li role="presentation">{{#link-to "user.posts" currentUser  role="menuitem"}}My own page{{/link-to}}</li>
           <li role="presentation"><a {{action "transToPostMode"}} role="menuitem" href="#" data-toggle="modal" data-target="#newPostForm" >New post</a></li>
@@ -28,9 +30,15 @@
   </div>
 </nav>
 <section class="index">
-  {{render "signup"}}
-  {{render "login" }}
-  {{render "posts.new"}}
+
+  {{#if isAuthenticated}}
+    {{render "posts.new"}}
+    {{render "notification"}}
+  {{else}}
+    {{render "signup"}}
+    {{render "login" }}
+  {{/if}}
+
   {{outlet}}
 </section>
 <footer class="container-fluid index">
