--- a/frontend/app/templates/signup.hbs
+++ b/frontend/app/templates/signup.hbs
@@ -1,4 +1,4 @@
-<div class="modal fade bs-example-modal-sm signup-login-form" id="signupForm" role="dialog" aria-labelledby="signupFormLabel" aria-hidden="true">
+<div class="modal fade signup-login-form" id="signupForm" role="dialog" aria-labelledby="signupFormLabel" aria-hidden="true">
   <div class="modal-dialog modal-sm">
     <div class="modal-content">
       <div class="modal-header">
