--- a/frontend/app/templates/post/comments.hbs
+++ b/frontend/app/templates/post/comments.hbs
@@ -23,5 +23,10 @@
     </li>
   {{/each}}
   
-  {{page-numbers content=content}}
+  {{#if isEnd}}
+  <button class="center-block btn btn-default normal-button" disabled="disabled">No more</button>
+  {{else}}
+  <button class="center-block btn btn-default normal-button load-next-button" {{action "loadMore"}} data-loading-text="Loading..." autocomplete="off" >Load More</button>
+  {{/if}}
+
 </ul>
