--- a/frontend/app/templates/posts/new.hbs
+++ b/frontend/app/templates/posts/new.hbs
@@ -15,7 +15,7 @@
         <form {{action "createComment" on="submit"}} class="form-horizontal">
           <div class="form-group">
             <div class="col-sm-12">
-              {{view "custom-textarea" id="editor" class="form-control" value=contentBody}}
+              {{view "custom-textarea" id="editor" class="form-control" }}
             </div>
           </div>
           <button data-loading-text="Creating..." autocomplete="off" id="createButton" type="submit" class="btn btn-default center-block">Create</button>
@@ -33,7 +33,7 @@
 
           <div class="form-group">
             <div class="col-sm-12">
-              {{view "custom-textarea" id="editor" class="form-control" value=contentBody}}
+              {{view "custom-textarea" id="editor" class="form-control" }}
             </div>
           </div>
           <button type="submit" data-loading-text="Creating..." autocomplete="off" id="createButton" class="btn btn-default center-block">Create</button>
