--- a/frontend/app/templates/user/posts.hbs
+++ b/frontend/app/templates/user/posts.hbs
@@ -7,5 +7,10 @@
     {{/each}}
   </ul>
 </div>
-  {{page-numbers content=content}}
+
+  {{#if isEnd}}
+  <button class="center-block btn btn-default normal-button" disabled="disabled">No more</button>
+  {{else}}
+  <button class="center-block btn btn-default normal-button load-next-button" {{action "loadMore"}} data-loading-text="Loading..." autocomplete="off" >Load More</button>
+  {{/if}}
 {{/if}}
