Consolidate the pagination when created a post or a comment

--- a/frontend/app/styles/app.css
+++ b/frontend/app/styles/app.css
@@ -119,6 +119,7 @@ div.all-contents div.title {
 
 div.all-contents div.title a {
   color: #066;
+  font-weight: 300;
 }
 
 div.all-contents div.info {
