--- a/frontend/app/templates/post/comments.hbs
+++ b/frontend/app/templates/post/comments.hbs
@@ -1,8 +1,5 @@
-<div class="comments-number">
-  共{{model.length}}条回复:
-</div>
 <ul class="list-group comments">
-  {{#each comment in model}}
+  {{#each comment in arrangedContent}}
     <li class="comment list-group-item">
       {{#if isAuthenticated}}
       <div class="pull-right reply">
@@ -23,10 +20,12 @@
     </li>
   {{/each}}
   
-  {{#if isEnd}}
-  <button class="center-block btn btn-default normal-button" disabled="disabled">No more</button>
-  {{else}}
-  <button class="center-block btn btn-default normal-button load-next-button" {{action "loadMore"}} data-loading-text="Loading..." autocomplete="off" >Load More</button>
+  {{#if model.length}}
+    {{#if isEnd}}
+    <button class="center-block btn btn-default normal-button" disabled="disabled">No more</button>
+    {{else}}
+    <button class="center-block btn btn-default normal-button load-next-button" {{action "loadMore"}} data-loading-text="Loading..." autocomplete="off" >Load More</button>
+    {{/if}}
   {{/if}}
 
 </ul>
