--- a/frontend/app/templates/post/comments.hbs
+++ b/frontend/app/templates/post/comments.hbs
@@ -1,3 +1,16 @@
+{{#if isAuthenticated}}
+<button  class="center-block btn btn-default normal-button" {{action "transToCommentMode" }} data-toggle="modal" data-target="#newPostForm" >Post a comment</button>
+{{else}}
+<div class="static-alert container-fluid">
+  You must <a href="#" data-toggle="modal" data-target="#loginForm">login</a> or  <a href="#" data-toggle="modal" data-target="#signupForm">signup</a> to post a comment
+</div>
+{{/if}}
+
+{{#if commentsCount}}
+  <div class="comments-number">
+    共{{commentsCount}}条回复:
+  </div>
+{{/if}}
 <ul class="list-group comments">
   {{#each comment in arrangedContent}}
     <li class="comment list-group-item">
