--- a/frontend/app/templates/posts/new.hbs
+++ b/frontend/app/templates/posts/new.hbs
@@ -21,7 +21,7 @@
               </ul>
               <div class="tab-content">
                 <div role="tabpanel" class="tab-pane active" id="edit" >
-                  {{view "custom-textarea" class="form-control editor comment-editor" rows="15" atwhoItems=atwhoItems}}
+                  {{view "custom-textarea" class="form-control editor comment-editor" rows="15" atwhoItems=atwhoItems atWho=atWho}}
                 </div>
                 <div role="tabpanel" class="tab-pane" id="preview" >
                   <div class="editor-preview entry">
