--- a/frontend/app/templates/application.hbs
+++ b/frontend/app/templates/application.hbs
@@ -1,7 +1,9 @@
 <nav class="navbar navbar-fixed-top global_nav">
   <div class="container-fluid">
-    <div class="navbar-brand navbar-left site_title" >
-      SimpleForum
+    <div class="navbar-header">
+      <div class="navbar-brand site_title" >
+        SimpleForum
+      </div>
     </div>
     <ul class="nav navbar-nav">
       <li>{{#link-to "index"}}Home{{/link-to}}</li>
