--- a/frontend/app/templates/application.hbs
+++ b/frontend/app/templates/application.hbs
@@ -18,7 +18,7 @@
         <a href="#" class="dropdown-toggle" data-toggle="dropdown" aria-expanded="true"><span class="caret"></span> {{currentUser.name}}</a>
         <ul class="dropdown-menu" role="menu">
           <li role="presentation">{{#link-to "user.posts" currentUser  role="menuitem"}}My own page{{/link-to}}</li>
-          <li role="presentation"><a {{action "transToPostMode"}} role="menuitem" href="#" data-toggle="modal" data-target="#newPostForm" >New post</a></li>
+          <li role="presentation"><a {{action "transToPostMode"}} role="menuitem" href="#" data-toggle="modal" data-target="#editor" >New post</a></li>
           <li role="presentation"><a {{action "logOut"}} role="menuitem" href="#">Logout</a></li>
         </ul>
       </li>
@@ -34,7 +34,7 @@
 <section class="index">
 
   {{#if isAuthenticated}}
-    {{render "posts.new"}}
+    {{render "editor"}}
     {{render "notification"}}
   {{else}}
     {{render "signup"}}
