--- a/frontend/app/templates/editor.hbs
+++ b/frontend/app/templates/editor.hbs
@@ -1,39 +1,34 @@
-<div class="modal fade" id="newPostForm" role="dialog" aria-labelledby="newPostFormLabel" aria-hidden="true">
+<div class="modal fade" id="editor" role="dialog" aria-labelledby="editorLabel" aria-hidden="true">
 <div class="modal-dialog modal-lg">
   <div class="modal-content ">
     <div class="modal-header">
       <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-      {{#if isCreateComment}}
-        <p class="modal-title" id='newPostFormLabel'>Create your new Comment</p>
-      {{else}}
-        <p class="modal-title" id='newPostFormLabel'>Create your new post</p>
-      {{/if}}
+        <p class="modal-title" id="editorLabel">
+          {{modalTitle}}
+        </p>
     </div>
     <div class="modal-body">
-      <div class="container-fluid post-new-page">
+      <div class="container-fluid custom-editor">
+        <form {{action createMode on="submit"}} class="form-horizontal">
         {{#if isCreateComment}}
-        <form {{action "createComment" on="submit"}} class="form-horizontal">
-          <div class="form-group">
-            <div class="col-sm-12" role="tabpanel">
-              <ul class="nav nav-tabs" role="tablist">
-                <li role="presentation" class="active"><a href="#edit" aria-controls="edit" role="tab" data-toggle="tab">Edit</a></li>
-                <li role="presentation" ><a {{action "mdPreview"}} href="#preview" aria-controls="preview" role="tab" data-toggle="tab">Preview</a></li>
-              </ul>
-              <div class="tab-content">
-                <div role="tabpanel" class="tab-pane active" id="edit" >
-                  {{view "custom-textarea" class="form-control editor comment-editor" rows="15" atwhoItems=atwhoItems atWho=atWho}}
-                </div>
+        <div class="form-group">
+          <div class="col-sm-12" role="tabpanel">
+            <ul class="nav nav-tabs" role="tablist">
+              <li role="presentation" class="active"><a href="#edit" aria-controls="edit" role="tab" data-toggle="tab">Edit</a></li>
+              <li role="presentation" ><a {{action "mdPreview"}} href="#preview" aria-controls="preview" role="tab" data-toggle="tab">Preview</a></li>
+            </ul>
+            <div class="tab-content">
+              <div role="tabpanel" class="tab-pane active" id="edit" >
+                {{view "custom-textarea" class="form-control editor comment-editor" rows="15" atwhoItems=atwhoItems atWho=atWho}}
+              </div>
                 <div role="tabpanel" class="tab-pane" id="preview" >
                   <div class="editor-preview entry">
                   </div>
                 </div>
-              </div>
             </div>
           </div>
-          <button data-loading-text="Creating..." autocomplete="off" id="createButton" type="submit" class="btn btn-default center-block">Create</button>
-        </form>
+        </div>
         {{else}}
-        <form {{action "createPost" on="submit"}} class="form-horizontal">
           <div class="form-group">
             <div class="col-sm-4">
               {{view "select" content=selectContent class="form-control" selection=tag}}
@@ -51,7 +46,7 @@
               </ul>
               <div class="tab-content">
                 <div role="tabpanel" class="tab-pane active" id="edit" >
-                  {{view "custom-textarea" class="form-control editor" rows="15" }}
+                  {{view "custom-textarea" class="form-control editor post-editor" rows="15" }}
                 </div>
                 <div role="tabpanel" class="tab-pane" id="preview" >
                   <div class="editor-preview entry">
@@ -60,9 +55,9 @@
               </div>
             </div>
           </div>
-          <button type="submit" data-loading-text="Creating..." autocomplete="off" id="createButton" class="btn btn-default center-block">Create</button>
-        </form>
         {{/if}}
+        <button type="submit" data-loading-text={{buttonLoadContent}} autocomplete="off" id="createButton" class="btn btn-default center-block">{{buttonContent}}</button>
+        </form>
     </div>
   </div>
 
